[package]
name = "trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Matrix SDK and directly-related tools
matrix-sdk = { version = "0.7.1", features = ["bundled-sqlite", "e2e-encryption", "rustls-tls"], default-features = false }

anyhow = "1.0.79"
futures = "0.3.30"
tokio = { version = "1.38.2", features = ["full"] }

# Miscellaneously-useful helpers
argh = "0.1.12"
chrono = "0.4.33"
directories = "5.0.1"
rpassword = "7.3.1"
serde = "1.0.195"
serde_json = "1.0.111"
text_io = "0.1.12"
